[WIP] Fixed wrong use of RequirementLevel.*_NOT